Added support to specify custom webapps for Authoring and Delivery Tomcat images

--- a/build.gradle
+++ b/build.gradle
@@ -34,49 +34,35 @@ project.version = project.hasProperty("tag") ? project.property("tag") : "3.1.14
 ext {
     imagesDir = "${projectDir}/images"
     imagesBuildDir = "${buildDir}/images"
-    downloadsDir = "${buildDir}/downloads"
+    tempDir = "${buildDir}/temp"
 
     libsslUrl = "https://downloads.craftercms.org/ent/lib/libssl1.0.0.tar.gz"
 
     authoringBundleUrl = "https://downloads.craftercms.org/${project.version}/social/crafter-cms-authoring-${project.version}.tar.gz"
-    authoringBundleFile = "${downloadsDir}/" + FilenameUtils.getName(authoringBundleUrl)
-    authoringBundleRoot = "${downloadsDir}/" + FilenameUtils.getBaseName(authoringBundleUrl) + "/crafter"
+    authoringBundleFile = "${tempDir}/" + FilenameUtils.getName(authoringBundleUrl)
+    authoringBundleRoot = "${tempDir}/" + FilenameUtils.getBaseName(authoringBundleUrl) + "/crafter"
 
     deliveryBundleUrl = "https://downloads.craftercms.org/${project.version}/social/crafter-cms-delivery-${project.version}.tar.gz"
-    deliveryBundleFile = "${downloadsDir}/" + FilenameUtils.getName(deliveryBundleUrl)
-    deliveryBundleRoot = "${downloadsDir}/" + FilenameUtils.getBaseName(deliveryBundleUrl) + "/crafter"
+    deliveryBundleFile = "${tempDir}/" + FilenameUtils.getName(deliveryBundleUrl)
+    deliveryBundleRoot = "${tempDir}/" + FilenameUtils.getBaseName(deliveryBundleUrl) + "/crafter"
 
     if (project.hasProperty("authoring.bundle")) {
         if (project.property("authoring.bundle") ==~ /^https?:\/\/.+$/) {
             authoringBundleUrl = project.property("authoring.bundle")
-            authoringBundleFile = "${downloadsDir}/" + FilenameUtils.getName(authoringBundleUrl)
-            authoringBundleRoot = "${downloadsDir}/" + FilenameUtils.getBaseName(authoringBundleUrl) + "/crafter"
+            authoringBundleFile = "${tempDir}/" + FilenameUtils.getName(authoringBundleUrl)
         } else {
             authoringBundleUrl = ""
             authoringBundleFile = project.property("authoring.bundle")
-
-            if (file(authoringBundleFile).directory) {
-                authoringBundleRoot = authoringBundleFile
-            } else {
-                authoringBundleRoot = "${downloadsDir}/" + FilenameUtils.getBaseName(authoringBundleFile) + "/crafter"
-            }
         }
     }
 
     if (project.hasProperty("delivery.bundle")) {
         if (project.property("delivery.bundle") ==~ /^https?:\/\/.+$/) {
             deliveryBundleUrl = project.property("delivery.bundle")
-            deliveryBundleFile = "${downloadsDir}/" + FilenameUtils.getName(deliveryBundleUrl)
-            deliveryBundleRoot = "${downloadsDir}/" + FilenameUtils.getBaseName(deliveryBundleUrl) + "/crafter"
+            deliveryBundleFile = "${tempDir}/" + FilenameUtils.getName(deliveryBundleUrl)
         } else {
             deliveryBundleUrl = ""
             deliveryBundleFile = project.property("delivery.bundle")
-
-            if (file(deliveryBundleFile).directory) {
-                deliveryBundleRoot = deliveryBundleFile
-            } else {
-                deliveryBundleRoot = "${downloadsDir}/" + FilenameUtils.getBaseName(deliveryBundleFile) + "/crafter"
-            }
         }
     }
 
@@ -124,7 +110,7 @@ ext {
 task downloadLibssl(type: Download) {
     src libsslUrl
     overwrite false
-    dest "${downloadsDir}/libssl1.0.0.tar.gz" 
+    dest "${tempDir}/libssl1.0.0.tar.gz" 
 }
 
 task downloadAuthoringBundle(type: Download) {
@@ -141,23 +127,27 @@ task downloadDeliveryBundle(type: Download) {
 
 task expandLibssl(type: Copy) {
     mustRunAfter downloadLibssl
-    from tarTree("${downloadsDir}/libssl1.0.0.tar.gz")
-    into "${downloadsDir}/libssl1.0.0"
+    from tarTree("${tempDir}/libssl1.0.0.tar.gz")
+    into "${tempDir}/libssl1.0.0"
 }
 
 task expandAuthoringBundle(type: Copy) {
     mustRunAfter downloadAuthoringBundle
     from tarTree(authoringBundleFile)
-    into "${downloadsDir}/" + FilenameUtils.getBaseName(authoringBundleFile)
+    into "${tempDir}/" + FilenameUtils.getBaseName(authoringBundleFile)
 }
 
 task expandDeliveryBundle(type: Copy) {
     mustRunAfter downloadDeliveryBundle
     from tarTree(deliveryBundleFile)
-    into "${downloadsDir}/" + FilenameUtils.getBaseName(deliveryBundleFile)
+    into "${tempDir}/" + FilenameUtils.getBaseName(deliveryBundleFile)
 }
 
-task prepareAuthoringBundle() {
+task prepareAuthoringBundle() { 
+    if (project.hasProperty("enterprise")) {
+        dependsOn downloadLibssl
+        dependsOn expandLibssl 
+    }
     if (!file(authoringBundleRoot).exists()) {
         if (authoringBundleUrl) {
             dependsOn downloadAuthoringBundle
@@ -165,13 +155,14 @@ task prepareAuthoringBundle() {
         } else if (file(authoringBundleFile).file) {
             dependsOn expandAuthoringBundle
         } else {
-            ext.authoringBundleRoot = authoringBundleFile
+            doLast {
+                copy {
+                    from "${authoringBundleFile}/"
+                    to authoringBundleRoot
+                }
+            }
         } 
-    }  
-    if (project.hasProperty("enterprise")) {
-        dependsOn downloadLibssl
-        dependsOn expandLibssl 
-    }
+    }     
 }
 
 task prepareDeliveryBundle() {
@@ -181,14 +172,50 @@ task prepareDeliveryBundle() {
             dependsOn expandDeliveryBundle            
         } else if (file(deliveryBundleFile).file) {
             dependsOn expandDeliveryBundle
-        } else {
-            ext.deliveryBundleRoot = deliveryBundleFile
+        }  else {
+            doLast {
+                copy {
+                    from "${deliveryBundleRoot}/"
+                    to deliveryBundleFile
+                }
+            }
         } 
+    }
+}
+
+task copyAuthoringCustomWebapps() {
+    dependsOn prepareAuthoringBundle
+
+    if (project.hasProperty("authoring.customWebapps")) {
+        doLast {
+            project.property('authoring.customWebapps').split(',').each { war ->
+                copy {
+                    from war
+                    into "${authoringBundleRoot}/bin/apache-tomcat/webapps"
+                }
+            }
+        } 
+    }
+}
+
+task copyDeliveryCustomWebapps() {
+    dependsOn prepareDeliveryBundle
+
+    if (project.hasProperty("delivery.customWebapps")) {
+        doLast {
+            project.property('delivery.customWebapps').split(',').each { war ->
+                copy {
+                    from war
+                    into "${deliveryBundleRoot}/bin/apache-tomcat/webapps"
+                }
+            }
+        }
     }
 }
 
 task buildAuthoringTomcat(group: "Build", description: "Builds the Authoring Tomcat Docker image") {
     dependsOn prepareAuthoringBundle
+    dependsOn copyAuthoringCustomWebapps
 
     def buildDir = "${imagesBuildDir}/authoring/tomcat"
 
@@ -203,7 +230,7 @@ task buildAuthoringTomcat(group: "Build", description: "Builds the Authoring Tom
 
         if (project.hasProperty("enterprise")) {
             copy {
-                from "${downloadsDir}/libssl1.0.0/"
+                from "${tempDir}/libssl1.0.0/"
                 into "${buildDir}/lib"
             }
         }
@@ -215,7 +242,7 @@ task buildAuthoringTomcat(group: "Build", description: "Builds the Authoring Tom
         }
 
         exec {
-            commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "craftercms/authoring_tomcat:${project.version}", buildDir
+            commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "${project.authoringTomcatImageName}:${project.version}", buildDir
         }
     }
 }
@@ -227,13 +254,14 @@ task buildAuthoringTomcatWithImageMagick(group: "Build", description: "Builds th
 
     doLast {
         exec {
-            commandLine 'docker', 'build', '--target', 'imagemagick', '-t', "craftercms/authoring_tomcat_with_imagemagick:${project.version}", buildDir
+            commandLine 'docker', 'build', '--target', 'imagemagick', '-t', "${project.authoringTomcatWithImageMagickImageName}:${project.version}", buildDir
         }
     }
 }
 
 task buildAuthoringTomcatWithSolrSupport(group: "Build", description: "Builds the Authoring Tomcat With Solr Support Docker image") {
     dependsOn prepareAuthoringBundle
+    dependsOn copyAuthoringCustomWebapps
 
     def buildDir = "${imagesBuildDir}/authoring/tomcat_with_solr_support"
 
@@ -248,7 +276,7 @@ task buildAuthoringTomcatWithSolrSupport(group: "Build", description: "Builds th
 
         if (project.hasProperty("enterprise")) {
             copy {
-                from "${downloadsDir}/libssl1.0.0/"
+                from "${tempDir}/libssl1.0.0/"
                 into "${buildDir}/lib"
             }
         }        
@@ -260,13 +288,14 @@ task buildAuthoringTomcatWithSolrSupport(group: "Build", description: "Builds th
         }
 
         exec {
-            commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "craftercms/authoring_tomcat_solr_compatible:${project.version}", buildDir
+            commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "${project.authoringTomcatWithSolrSupportImageName}:${project.version}", buildDir
         }
     }
 }
 
 task buildDeliveryTomcat(group: "Build", description: "Builds the Delivery Tomcat Docker image") {
     dependsOn prepareDeliveryBundle
+    dependsOn copyDeliveryCustomWebapps
 
     def buildDir = "${imagesBuildDir}/delivery/tomcat"
 
@@ -286,13 +315,14 @@ task buildDeliveryTomcat(group: "Build", description: "Builds the Delivery Tomca
         }
 
         exec {
-            commandLine 'docker', 'build', '-t', "craftercms/delivery_tomcat:${project.version}", buildDir
+            commandLine 'docker', 'build', '-t', "${project.deliveryTomcatDockerImageName}:${project.version}", buildDir
         }
     }
 }
 
 task buildDeliveryTomcatWithSolrSupport(group: "Build", description: "Builds the Delivery Tomcat With Solr Support Docker image") {
     dependsOn prepareDeliveryBundle
+    dependsOn copyDeliveryCustomWebapps
 
     def buildDir = "${imagesBuildDir}/delivery/tomcat_with_solr_support"
 
@@ -312,7 +342,7 @@ task buildDeliveryTomcatWithSolrSupport(group: "Build", description: "Builds the
         }
 
         exec {
-            commandLine 'docker', 'build', '-t', "craftercms/delivery_tomcat_solr_compatible:${project.version}", buildDir
+            commandLine 'docker', 'build', '-t', "${project.deliveryTomcatWithSolrSupportImageName}:${project.version}", buildDir
         }
     }
 }
@@ -342,7 +372,7 @@ task buildDeployer(group: "Build", description: "Builds the Deployer Docker imag
         }
 
         exec {
-            commandLine 'docker', 'build', '-t', "craftercms/deployer:${project.version}", buildDir
+            commandLine 'docker', 'build', '-t', "${project.deployerImageName}:${project.version}", buildDir
         }
     }
 }
@@ -369,7 +399,7 @@ task buildProfile(group: "Build", description: "Builds the Profile Docker image"
         }
 
         exec {
-            commandLine 'docker', 'build', '-t', "craftercms/profile:${project.version}", buildDir
+            commandLine 'docker', 'build', '-t', "${project.profileImageName}:${project.version}", buildDir
         }
     }    
 }
@@ -387,7 +417,7 @@ task buildGitSshServer(group: "Build", description: "Builds the Git SSH Server D
         }
 
         exec {
-            commandLine 'docker', 'build', '-t', "craftercms/git_ssh_server:${project.version}", buildDir
+            commandLine 'docker', 'build', '-t', "${project.gitSshServerImageName }:${project.version}", buildDir
         }
     }    
 }
@@ -405,7 +435,7 @@ task buildGitHttpsServer(group: "Build", description: "Builds the Git HTTPS Serv
         }
 
         exec {
-            commandLine 'docker', 'build', '-t', "craftercms/git_https_server:${project.version}", buildDir
+            commandLine 'docker', 'build', '-t', "${project.gitHttpsServerImageName}:${project.version}", buildDir
         }
     }    
 }
@@ -423,39 +453,37 @@ task buildLogrotate(group: "Build", description: "Builds the Logrotate Docker im
         }
 
         exec {
-            commandLine 'docker', 'build', '-t', "craftercms/logrotate:${project.version}", buildDir
+            commandLine 'docker', 'build', '-t', "${project.logrotateImageName}:${project.version}", buildDir
         }
     }    
 }
 
-if (project.hasProperty("enterprise")) {
-    task buildStudioArbiter(group: "Build", description: "Builds the Studio Arbiter Docker image") {
-        dependsOn prepareAuthoringBundle
-        
-        def buildDir = "${imagesBuildDir}/arbiter"
-        
-        doFirst {
-            delete buildDir
+task buildStudioArbiter(group: "Build", description: "Builds the Studio Arbiter Docker image") {
+    dependsOn prepareAuthoringBundle
+    
+    def buildDir = "${imagesBuildDir}/arbiter"
+    
+    doFirst {
+        delete buildDir
+    }
+    doLast {
+        copy {
+            from "${tempDir}/libssl1.0.0/"
+            into "${buildDir}/lib"
         }
-        doLast {
-            copy {
-                from "${downloadsDir}/libssl1.0.0/"
-                into "${buildDir}/lib"
-            }
-            
-            copy {
-                from "${authoringBundleRoot}/bin/studio-arbiter/studio-arbiter.jar"
-                into "${buildDir}/bin"
-            }
-            
-            copy {
-                from "${imagesDir}/arbiter"
-                into buildDir
-            }
-            
-            exec {
-                commandLine 'docker', 'build', '-t', "craftercms/studio-arbiter:${project.version}", buildDir
-            }
+        
+        copy {
+            from "${authoringBundleRoot}/bin/studio-arbiter/studio-arbiter.jar"
+            into "${buildDir}/bin"
+        }
+        
+        copy {
+            from "${imagesDir}/arbiter"
+            into buildDir
+        }
+        
+        exec {
+            commandLine 'docker', 'build', '-t', "${project.studioArbiterImageName}:${project.version}", buildDir
         }
     }
 }
